@startuml
Solution44 o-- Product
Solution44 o-- ProductSearcher
Solution44 o-- JsonParser
JsonParser o-- ProductList

class Solution44 {
-{static} final Scanner in
-{static} final String DEFAULT_JSON_PATH
-ArrayList<Product> productList
-final ProductSearcher productSearcher
-final JsonParser jsonParser
+void main()
}

class JsonParser {
-final ProductList products
-final Path pathToJson
+List<Product> readJson()
}

class ProductSearcher {
-final List<Product> productList
+boolean searchProducts(String searchString)
}

class ProductList {
-final List<Product> products;
+List<Product> getList()
}

class Product {
+String name
+double price
+int quantity
}
@enduml